# Adaptive_Nova_Engine

./: CMakeLists.txt
src/: gpu_detect.cpp  gpu_detect.hpp  nova_engine.cpp
